--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,12 @@
 {
   "compilerOptions": {
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "#/*": ["./*"],
+      "!/*": ["./public/*"],
+      "@/c/*": ["./src/components/*"],
+      "@/p/*": ["./src/pages/*"],
+      "@/s/*": ["./src/styles/*"]
     }
   }
 }
