--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,7 @@
     ],
     "react/jsx-curly-brace-presence": "warn",
     "react/jsx-filename-extension": "off",
-    "react/jsx-fragments": [2, "element"],
+    // "react/jsx-fragments": [2, "element"],
     "react/jsx-indent": "off",
     "react/jsx-indent-props": "off",
     "react/jsx-one-expression-per-line": "off",
