--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
     "deploy": "vercel"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.14",
+    "framer-motion": "^10.15.0",
     "next": "13.4.12",
+    "postcss": "^8.4.27",
     "react": "18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "react-countup": "^6.4.2",
-    "tsparticles": "^2.11.1",
     "react-tsparticles": "^2.11.0",
-    "framer-motion": "^10.15.0",
     "swiper": "^9.4.0",
-    "tailwindcss": "^3.3.3",
     "tailwind-scrollbar": "^3.0.4",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.27"
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss": "^3.3.3",
+    "tsparticles": "^2.11.1"
   },
   "devDependencies": {
     "eslint": "8.46.0",
