--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "vercel"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "autoprefixer": "^10.4.14",
     "framer-motion": "^10.15.0",
     "next": "13.4.12",
@@ -28,6 +29,7 @@
     "tsparticles": "^2.11.1"
   },
   "devDependencies": {
+    "@types/react": "18.2.20",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "eslint-config-prettier": "^8.9.0",
