--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "check": "prettier --check .",
     "format": "prettier --write .",
-    "deploy": "vercel"
+    "deploy": "vercel",
+    "prod": "vercel --prod"
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
