--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "tailwind-scrollbar": "^3.0.4",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.3.3",
+    "tailwindcss-text-fill-stroke": "^1.1.2",
     "tsparticles": "^2.11.1"
   },
   "devDependencies": {
