--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "digitl-alchemyst-portfolio",
+  "name": "digitl-alchemyst",
   "version": "0.1.0",
   "private": true,
   "scripts": {
